# edikted-assignment

./: .gitignore  CLAUDE.md  Makefile  PRD.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: fa22dbce3e75_initial_schema.py
backend/app/: config.py  database.py  exceptions.py  main.py  seed.py
backend/app/models/: __init__.py  attribute.py  garment.py  material.py  sample_set.py  supplier.py
backend/app/routers/: attributes.py  garments.py  materials.py  suppliers.py
backend/app/schemas/: __init__.py  attribute.py  garment.py  material.py  sample_set.py  supplier.py
backend/app/services/: attribute_service.py  garment_service.py  lifecycle.py  material_service.py  supplier_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: Badge.tsx  Modal.tsx  Spinner.tsx
frontend/src/hooks/: useAttributes.ts  useGarments.ts  useMaterials.ts  useSuppliers.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  GarmentDetail.tsx
frontend/src/types/: index.ts
